DuPont DevSB/src/objects/ccrz__L_Logger__c.object
<CustomObject>
    <description>This logs the debug logs created for the source application</description>
    <fields>
        <fullName>ccrz__Log_Level__c</fullName>
        <description>Describes the different logging levels available in Salesforce</description>
        <inlineHelpText>Describes the different logging levels available in Salesforce</inlineHelpText>
        <label>Log Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>WARN</fullName>
                </value>
                <value>
                    <fullName>INFO</fullName>
                </value>
                <value>
                    <fullName>DEBUG</fullName>
                </value>
                <value>
                    <fullName>FINE</fullName>
                </value>
                <value>
                    <fullName>FINER</fullName>
                </value>
                <value>
                    <fullName>FINEST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__Log_Status__c</fullName>
        <description>Stores the logging status as needed in the code</description>
        <label>Log Status</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Log_Value__c</fullName>
        <description>Stores the actual string to be logged into the database.</description>
        <label>Log Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__Send_Log_By_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A flag to indicate whether the log needs to be emailed</description>
        <label>Send Log By Email</label>
        <type>Checkbox</type>
    </fields>
    <label>L_Logger</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Logger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>L_Loggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>